# app/api/getChristmasGifts/route.ts
@@ -1,0 +1,1 @@
+export { GET } from '@/src/ACP/api/getChristmasGifts';
